trying to fix paragraph placement kinda off center

--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@ video {
   border: 1px dashed rgba(255, 255, 255, 0.7);
   z-index: 2;
   font-size: 12px;
-  margin-left: 10px;
 }
 
 .highlighter {
